--- a/package.json
+++ b/package.json
@@ -1,56 +1,51 @@
 {
-  "name": "pie-ui",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
-  "dependencies": {
-    "clsx": "^2.1.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@storybook/addon-a11y": "^8",
-    "@storybook/addon-essentials": "^8",
-    "@storybook/addon-interactions": "^8",
-    "@storybook/addon-onboarding": "8.6.14",
-    "@storybook/blocks": "^8.6.14",
-    "@storybook/react": "^8",
-    "@storybook/react-vite": "^8",
-    "@storybook/test": "^8",
-    "@types/node": "^24.10.0",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@vanilla-extract/css": "^1.17.4",
-    "@vanilla-extract/recipes": "^0.5.7",
-    "@vanilla-extract/vite-plugin": "^5.1.1",
-    "@vitejs/plugin-react": "^5.1.0",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "eslint-plugin-storybook": "^10.0.7",
-    "globals": "^16.5.0",
-    "storybook": "^8",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.3",
-    "vite": "npm:rolldown-vite@7.2.2"
-  },
-  "pnpm": {
-    "overrides": {
-      "vite": "npm:rolldown-vite@7.2.2"
-    }
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
-  }
+	"name": "pie-ui",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build"
+	},
+	"dependencies": {
+		"clsx": "^2.1.1",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.39.1",
+		"@storybook/addon-a11y": "^8",
+		"@storybook/addon-essentials": "^8",
+		"@storybook/addon-interactions": "^8",
+		"@storybook/addon-onboarding": "8.6.14",
+		"@storybook/blocks": "^8.6.14",
+		"@storybook/react": "^8",
+		"@storybook/react-vite": "^8",
+		"@storybook/test": "^8",
+		"@types/node": "^24.10.0",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"@vanilla-extract/css": "^1.17.4",
+		"@vanilla-extract/recipes": "^0.5.7",
+		"@vanilla-extract/vite-plugin": "^5.1.1",
+		"@vitejs/plugin-react": "^5.1.0",
+		"eslint": "^9.39.1",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.24",
+		"eslint-plugin-storybook": "^10.0.7",
+		"globals": "^16.5.0",
+		"storybook": "^8",
+		"typescript": "~5.9.3",
+		"typescript-eslint": "^8.46.3",
+		"vite": "^5.4.11"
+	},
+	"eslintConfig": {
+		"extends": [
+			"plugin:storybook/recommended"
+		]
+	}
 }
