--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-	"name": "pie-ui",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
+  "name": "pie-ui",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "license": "MIT",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
