--- a/package.json
+++ b/package.json
@@ -1,24 +1,50 @@
 {
   "name": "pie-ui",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "license": "MIT",
+  "description": "React + TypeScript UI component library with design tokens",
+  "author": "Pie UI Contributors",
+  "keywords": ["react", "ui", "components", "design-system", "typescript"],
+  "main": "./dist/pie-ui.cjs.js",
+  "module": "./dist/pie-ui.es.js",
+  "types": "./dist/components/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/pie-ui.es.js",
+      "require": "./dist/pie-ui.cjs.js",
+      "types": "./dist/components/index.d.ts"
+    },
+    "./style.css": "./dist/style.css",
+    "./package.json": "./package.json"
+  },
+  "files": [
+    "dist"
+  ],
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc -b && vite build",
+		"build": "vite build && tsc --project tsconfig.build.json",
+		"build:lib": "pnpm run build",
 		"lint": "eslint .",
 		"preview": "vite preview",
 		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build"
+		"build-storybook": "storybook build",
+		"prepublishOnly": "pnpm run build:lib"
 	},
 	"dependencies": {
-		"clsx": "^2.1.1",
+		"clsx": "^2.1.1"
+	},
+	"peerDependencies": {
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.1",
+		"@types/node": "^24.10.1",
+		"@types/react": "^18.3.26",
+		"@types/react-dom": "^18.3.7",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"@storybook/addon-a11y": "^8",
 		"@storybook/addon-essentials": "^8",
 		"@storybook/addon-interactions": "^8",
@@ -27,9 +53,6 @@
 		"@storybook/react": "^8",
 		"@storybook/react-vite": "^8",
 		"@storybook/test": "^8",
-		"@types/node": "^24.10.0",
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
 		"@vanilla-extract/css": "^1.17.4",
 		"@vanilla-extract/recipes": "^0.5.7",
 		"@vanilla-extract/vite-plugin": "^5.1.1",
