--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "pie-ui",
+  "name": "@3o14/pie-ui",
   "version": "0.1.0",
   "type": "module",
   "license": "MIT",
   "description": "React + TypeScript UI component library with design tokens",
-  "author": "Pie UI Contributors",
+  "author": "3o14",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/3o14/pie-ui.git"
+  },
+  "bugs": {
+    "url": "https://github.com/3o14/pie-ui/issues"
+  },
+  "homepage": "https://github.com/3o14/pie-ui#readme",
   "keywords": ["react", "ui", "components", "design-system", "typescript"],
   "main": "./dist/pie-ui.cjs.js",
   "module": "./dist/pie-ui.es.js",
