feat: add README sync script for Storybook
- Create scripts/sync-readme.js to auto-sync README to Introduction.mdx
- Update build-storybook script to auto-sync before build
- Add sync-readme npm script for manual sync
- No more manual updates needed!

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
 		"lint": "eslint .",
 		"preview": "vite preview",
 		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build",
+		"build-storybook": "pnpm run sync-readme && storybook build",
+		"sync-readme": "node scripts/sync-readme.js",
 		"prepublishOnly": "pnpm run build:lib"
 	},
 	"dependencies": {
