--- a/package.json
+++ b/package.json
@@ -1,34 +1,40 @@
 {
-  "name": "@3o14/pie-ui",
-  "version": "0.1.1",
-  "type": "module",
-  "license": "MIT",
-  "description": "React + TypeScript UI component library with design tokens",
-  "author": "3o14",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/3o14/pie-ui.git"
-  },
-  "bugs": {
-    "url": "https://github.com/3o14/pie-ui/issues"
-  },
-  "homepage": "https://github.com/3o14/pie-ui#readme",
-  "keywords": ["react", "ui", "components", "design-system", "typescript"],
-  "main": "./dist/pie-ui.cjs.js",
-  "module": "./dist/pie-ui.es.js",
-  "types": "./dist/components/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/pie-ui.es.js",
-      "require": "./dist/pie-ui.cjs.js",
-      "types": "./dist/components/index.d.ts"
-    },
-    "./style.css": "./dist/style.css",
-    "./package.json": "./package.json"
-  },
-  "files": [
-    "dist"
-  ],
+	"name": "@3o14/pie-ui",
+	"version": "0.1.2",
+	"type": "module",
+	"license": "MIT",
+	"description": "React + TypeScript UI component library with design tokens",
+	"author": "3o14",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/3o14/pie-ui.git"
+	},
+	"bugs": {
+		"url": "https://github.com/3o14/pie-ui/issues"
+	},
+	"homepage": "https://github.com/3o14/pie-ui#readme",
+	"keywords": [
+		"react",
+		"ui",
+		"components",
+		"design-system",
+		"typescript"
+	],
+	"main": "./dist/pie-ui.cjs.js",
+	"module": "./dist/pie-ui.es.js",
+	"types": "./dist/components/index.d.ts",
+	"exports": {
+		".": {
+			"import": "./dist/pie-ui.es.js",
+			"require": "./dist/pie-ui.cjs.js",
+			"types": "./dist/components/index.d.ts"
+		},
+		"./style.css": "./dist/style.css",
+		"./package.json": "./package.json"
+	},
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build && tsc --project tsconfig.build.json",
@@ -44,21 +50,20 @@
 		"clsx": "^2.1.1"
 	},
 	"peerDependencies": {
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.1",
 		"@types/node": "^24.10.1",
-		"@types/react": "^18.3.26",
-		"@types/react-dom": "^18.3.7",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
+		"@types/react": "^19.0.0",
+		"@types/react-dom": "^19.0.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
 		"@storybook/addon-a11y": "^8",
 		"@storybook/addon-essentials": "^8",
 		"@storybook/addon-interactions": "^8",
-		"@storybook/addon-onboarding": "8.6.14",
-		"@storybook/blocks": "^8.6.14",
+		"@storybook/blocks": "^8",
 		"@storybook/react": "^8",
 		"@storybook/react-vite": "^8",
 		"@storybook/test": "^8",
