--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@3o14/pie-ui",
-	"version": "0.1.2",
+	"version": "0.1.3",
 	"type": "module",
 	"license": "MIT",
 	"description": "React + TypeScript UI component library with design tokens",
@@ -50,8 +50,8 @@
 		"clsx": "^2.1.1"
 	},
 	"peerDependencies": {
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react": "^18.0.0 || ^19.0.0",
+		"react-dom": "^18.0.0 || ^19.0.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.1",
