--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "pnpm run sync-readme && storybook build",
 		"sync-readme": "node scripts/sync-readme.js",
-		"prepublishOnly": "pnpm run build:lib"
+		"prepublishOnly": "pnpm run build:lib",
+		"changeset": "changeset",
+		"version": "changeset version",
+		"release": "pnpm run build:lib && changeset publish"
 	},
 	"dependencies": {
 		"clsx": "^2.1.1"
@@ -54,12 +57,8 @@
 		"react-dom": "^18.0.0 || ^19.0.0"
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.29.7",
 		"@eslint/js": "^9.39.1",
-		"@types/node": "^24.10.1",
-		"@types/react": "^19.0.0",
-		"@types/react-dom": "^19.0.0",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
 		"@storybook/addon-a11y": "^8",
 		"@storybook/addon-essentials": "^8",
 		"@storybook/addon-interactions": "^8",
@@ -67,6 +66,9 @@
 		"@storybook/react": "^8",
 		"@storybook/react-vite": "^8",
 		"@storybook/test": "^8",
+		"@types/node": "^24.10.1",
+		"@types/react": "^19.0.0",
+		"@types/react-dom": "^19.0.0",
 		"@vanilla-extract/css": "^1.17.4",
 		"@vanilla-extract/recipes": "^0.5.7",
 		"@vanilla-extract/vite-plugin": "^5.1.1",
@@ -76,6 +78,8 @@
 		"eslint-plugin-react-refresh": "^0.4.24",
 		"eslint-plugin-storybook": "^10.0.7",
 		"globals": "^16.5.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
 		"storybook": "^8",
 		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.46.3",
