--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
 		"prepublishOnly": "pnpm run build:lib",
 		"changeset": "changeset",
 		"version": "changeset version",
-		"release": "pnpm run build:lib && npm publish --provenance --access public"
+		"release": "pnpm run build:lib && npm publish --access public"
 	},
 	"dependencies": {
 		"clsx": "^2.1.1"
