--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@3o14/pie-ui",
+	"name": "@3o14-0711/pie-ui",
 	"version": "0.2.0",
 	"type": "module",
 	"license": "MIT",
@@ -65,6 +65,8 @@
 		"@storybook/addon-a11y": "^8",
 		"@storybook/addon-essentials": "^8",
 		"@storybook/addon-interactions": "^8",
+		"@storybook/addon-storysource": "^8.6.14",
+		"@storybook/addon-themes": "^10.0.8",
 		"@storybook/blocks": "^8",
 		"@storybook/react": "^8",
 		"@storybook/react-vite": "^8",
@@ -84,6 +86,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"storybook": "^8",
+		"storybook-dark-mode": "^4.0.2",
 		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.46.3",
 		"vite": "^5.4.11"
