--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"bugs": {
 		"url": "https://github.com/3o14/pie-ui/issues"
 	},
-	"homepage": "https://github.com/3o14/pie-ui#readme",
+	"homepage": "https://3o14.github.io/pie-ui",
 	"keywords": [
 		"react",
 		"ui",
