--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@3o14-0711/pie-ui",
+	"name": "@3o14/pie-ui",
 	"version": "2.0.0",
 	"type": "module",
 	"license": "MIT",
@@ -50,7 +50,7 @@
 		"prepublishOnly": "pnpm run build:lib",
 		"changeset": "changeset",
 		"version": "changeset version",
-		"release": "pnpm run build:lib && npm publish --access public"
+		"release": "pnpm run version && pnpm run build:lib && npm publish --access public"
 	},
 	"dependencies": {
 		"clsx": "^2.1.1"
