--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-	"name": "@3o14/pie-ui",
-	"version": "2.0.0",
+	"name": "pine-ui-kit",
+	"version": "0.0.0",
 	"type": "module",
 	"license": "MIT",
 	"description": "React + TypeScript UI component library with design tokens",
 	"author": "3o14",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/3o14/pie-ui.git"
+		"url": "https://github.com/3o14/pine-ui-kit.git"
 	},
 	"bugs": {
-		"url": "https://github.com/3o14/pie-ui/issues"
+		"url": "https://github.com/3o14/pine-ui-kit/issues"
 	},
-	"homepage": "https://3o14.github.io/pie-ui",
+	"homepage": "https://3o14.github.io/pine-ui-kit",
 	"keywords": [
 		"react",
 		"ui",
@@ -20,13 +20,13 @@
 		"design-system",
 		"typescript"
 	],
-	"main": "./dist/pie-ui.cjs.js",
-	"module": "./dist/pie-ui.es.js",
+	"main": "./dist/pine-ui.cjs.js",
+	"module": "./dist/pine-ui.es.js",
 	"types": "./dist/components/index.d.ts",
 	"exports": {
 		".": {
-			"import": "./dist/pie-ui.es.js",
-			"require": "./dist/pie-ui.cjs.js",
+			"import": "./dist/pine-ui.es.js",
+			"require": "./dist/pine-ui.cjs.js",
 			"types": "./dist/components/index.d.ts"
 		},
 		"./style.css": "./dist/style.css",
