refactor: rename packages to src for better structure

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,8 +27,8 @@
 		/* Path Aliases */
 		"baseUrl": ".",
 		"paths": {
-			"@/*": ["./packages/*"]
+			"@/*": ["./src/*"]
 		}
 	},
-	"include": ["packages"]
+	"include": ["src"]
 }
