--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,7 +6,7 @@
 		"outDir": "./dist",
 		"noEmit": false
 	},
-	"include": ["packages/**/*"],
+	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist", "**/*.stories.tsx", "**/*.test.tsx", "src"]
 }
 
