test(Button): add comprehensive test suite with vitest

--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
 		"build": "vite build && tsc --project tsconfig.build.json",
 		"build:lib": "pnpm run build",
 		"lint": "eslint .",
+		"test": "vitest",
+		"test:ui": "vitest --ui",
+		"test:run": "vitest run",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "pnpm run sync-readme && storybook build",
 		"sync-readme": "node scripts/sync-readme.js",
@@ -69,6 +72,9 @@
 		"@storybook/react": "^8",
 		"@storybook/react-vite": "^8",
 		"@storybook/test": "^8",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.1",
+		"@testing-library/user-event": "^14.6.1",
 		"@types/node": "^24.10.1",
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0",
@@ -76,18 +82,21 @@
 		"@vanilla-extract/recipes": "^0.5.7",
 		"@vanilla-extract/vite-plugin": "^5.1.1",
 		"@vitejs/plugin-react": "^5.1.0",
+		"@vitest/ui": "^4.0.16",
 		"eslint": "^9.39.1",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.24",
 		"eslint-plugin-storybook": "^10.0.7",
 		"globals": "^16.5.0",
+		"jsdom": "^27.4.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"storybook": "^8",
 		"storybook-dark-mode": "^4.0.2",
 		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.46.3",
-		"vite": "^5.4.11"
+		"vite": "^5.4.11",
+		"vitest": "^4.0.16"
 	},
 	"eslintConfig": {
 		"extends": [
