--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -7,6 +7,6 @@
 		"noEmit": false
 	},
 	"include": ["src/**/*"],
-	"exclude": ["node_modules", "dist", "**/*.stories.tsx", "**/*.test.tsx"]
+	"exclude": ["node_modules", "dist", "**/*.stories.tsx", "**/*.test.tsx", "**/*.spec.tsx"]
 }
 
