--- a/package.json
+++ b/package.json
@@ -49,9 +49,10 @@
 		"build-storybook": "pnpm run sync-readme && storybook build",
 		"sync-readme": "node scripts/sync-readme.js",
 		"prepublishOnly": "pnpm run build:lib",
-		"changeset": "changeset",
-		"version": "changeset version",
-		"release": "pnpm run version && pnpm run build:lib && npm publish --access public"
+	"changeset": "changeset",
+	"version": "changeset version",
+	"release": "pnpm run version && pnpm run build:lib && npm publish --access public",
+	"pr": "./scripts/create-pr.sh"
 	},
 	"dependencies": {
 		"@base-ui/react": "^1.0.0",
