--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
 	},
 	"dependencies": {
 		"@base-ui/react": "^1.0.0",
-		"clsx": "^2.1.1",
-		"gh": "^2.8.9"
+		"clsx": "^2.1.1"
 	},
 	"peerDependencies": {
 		"react": "^18.0.0 || ^19.0.0",
